--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Rich Entry 1 - First Commit</h1> 
-   <h2>Second Entry - Second Commit</h2>
+   <h1>Rich Entry 1 - First Commit H1</h1> 
+   <h2>Second Entry - Second Commit H2</h2>
+   <h3>test H3</h3>
+   <h4>test H4</h4>
+   <h5>Test H5</h5>
+   <h6>Test H6</h6>
 </body>
 </html>
